--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,5 +53,5 @@
         "temp/":true,
         "Temp/":true
     },
-    "dotnet.defaultSolution": "DefaultProject.sln"
+    "dotnet.defaultSolution": "Random_Merge_Defense.sln"
 }
